--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server",
+    "seed" : "node db/seed.js",
     "build": "webpack -d --watch --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:react": "webpack -d --watch"
