--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server",
-    "seed" : "node db/seed.js",
+    "seed": "node db/seed.js",
     "build": "webpack -d --watch --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:react": "webpack -d --watch"
@@ -24,15 +24,21 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
-    "react": "^16.13.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "react-dom": "^16.13.1"
+    "webpack-cli": "^3.3.11"
   }
 }
