--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon server",
-    "seed": "node ../steam-reviews/db/seed.js node ../steam-reviews/db/seed.js",
+    "seed": "node ../steam-reviews/db/seed.js",
     "build": "webpack -d --watch --mode production",
     "build-server": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
