--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/FEC-Bell/steam-reviews-graph#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "css-loader": "^4.2.0",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
