--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "nodemon server",
     "start-server": "node index.js",
-    "seed": "node ../steam-reviews-graph/db/seed.js",
+    "seed": "node ../steam-reviews-graph/db/start.js",
     "build": "webpack -d --watch --mode production",
     "build-server": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev:react": "webpack -d --watch"
   },
   "repository": {
@@ -25,7 +25,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "css-loader": "^4.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.3",
+    "enzyme-to-json": "^3.5.0",
     "express": "^4.17.1",
+    "jest": "^26.3.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "react": "^16.13.1",
