--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "enzyme-adapter-react-16": "^1.15.3",
     "enzyme-to-json": "^3.5.0",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
     "jest": "^26.3.0",
     "moment": "^2.27.0",
     "mysql": "^2.18.1",
+    "nano": "^8.2.2",
     "nodemon": "^2.0.2",
     "pg": "^8.3.2",
     "promise-mysql": "^4.1.3",
@@ -46,6 +48,7 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
+    "artillery": "^1.6.1",
     "babel-loader": "^8.1.0",
     "eslint": "^7.3.1",
     "eslint-config-airbnb": "^18.2.0",
@@ -54,6 +57,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
     "morgan": "^1.10.0",
+    "newrelic": "^6.13.0",
     "supertest": "^4.0.2",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
