--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "promise-mysql": "^4.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "redis": "^3.0.2",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1"
